--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ serde_with = { version = "2.2.0", features = ["hex"] }
 unroll = "0.1.5"
 
 [dev-dependencies]
+bincode = "1.3.3"
 criterion   = "0.5.1"
 hex-literal = "0.4.1"
 rand_chacha = "0.3.1"
@@ -42,3 +43,7 @@ opt-level = 3
 
 [profile.test]
 opt-level = 3
+
+[[bench]]
+name = "poseidon2_circuit"
+harness = false
